# aigeneer

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.beads/: metadata.json
.claude/: CLAUDE.md
.claude/skills/: bot.md  checks.md  langgraph.md  prompts.md  runbooks.md
alembic/: env.py
alembic/versions/: b1a2c3d4e5f6_add_settings_ssh_keys.py  c3d4e5f6a7b8_fix_cascade_fks.py  d4e5f6a7b8c9_add_incident_actions_tg_msg.py  f0dde358a7f3_initial.py
app/: config.py  main.py
app/agent/: nodes.py  prompts.py  ssh_tools.py  tool_provider.py
app/bot/: callbacks.py  handlers.py  router.py
app/checks/: README.md  __init__.py  apache.py  base.py  disk.py  failed_units.py  inode.py  load.py  mariadb.py  memory.py  ports.py  services.py  ssl.py  zombies.py
app/db/: models.py  session.py
app/runbooks/: __init__.py  base.py  check_backup.py  clear_old_logs.py  free_memory.py  kill_process.py  mysql_processlist.py  restart_replication.py  restart_service.py  rotate_logs.py  show_connections.py  show_disk_usage.py  show_replication_status.py  show_slow_queries.py  show_top_processes.py
app/scheduler/: tasks.py  worker.py
app/services/: auth.py  crypto.py  incident.py  recommendations.py  seed.py  settings.py
app/web/: __init__.py  api.py  auth.py
docker/: Dockerfile
tests/: conftest.py
tests/agent/: test_command.py  test_ssh_tools.py  test_tool_provider.py
tests/bot/: test_callbacks.py  test_handlers.py
tests/checks/: conftest.py  test_base.py  test_disk.py  test_failed_units.py  test_inode.py  test_load.py  test_mariadb.py  (+5 more)
(+53 files in other folders)
