[project]
name = "ops-agent"
version = "0.1.0"
description = "Proactive infrastructure monitoring agent"
requires-python = ">=3.12"
dependencies = [
    # LangGraph + LLM
    "langgraph>=0.4",
    "langchain-openai>=0.3",
    "langgraph-checkpoint-redis>=0.3",

    # SSH
    "asyncssh>=2.20",

    # Task scheduling
    "celery[redis]>=5.4",

    # Web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "python-multipart>=0.0.18",
    "itsdangerous>=2.2",

    # Telegram
    "aiogram>=3.16",

    # Database
    "sqlalchemy[asyncio]>=2.0",
    "aiomysql>=0.2",
    "alembic>=1.15",

    # Config
    "pydantic-settings>=2.8",
    "pyyaml>=6.0",

    # Utils
    "structlog>=25.1",
    "httpx>=0.28",

    # Crypto
    "cryptography>=44.0",
    "passlib[bcrypt]>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "fakeredis>=2.26",
    "ruff>=0.11",
    "aiosqlite>=0.20",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
